tests/NormalTests/paczka2/big_fuzzy/31451893.err
Error in line 1: Eds A156 79,9
Error in line 11: S938 S938 3,9
Error in line 16: htWidzBx S955 49,0
Error in line 17: BKP8IMai A156 54,2
Error in line 24: CyTC A156 58,5
Error in line 15: o4lWL S711 5,8
Error in line 30: OHVVeLI S955 31,5
Error in line 41: CyTC S955 380,07
Error in line 40: CyTC S955 94,0
Error in line 39: OHVVeLI A156 66,7
Error in line 48: OHVVeLI A156 61,5
Error in line 45: htWidzBx S711 83,2
Error in line 60: o4lWL A156 7,4
Error in line 62: o4lWL S938 98,7
Error in line 70: Eds S955 45,9
Error in line 73: Eds S711 68,0
Error in line 83: o4lWL S711 7,0
Error in line 91: Eds A156 16,2
Error in line 95: o4lWL S955 27,2
Error in line 105: htWidzBx A156 36,5
Error in line 115: BKP8IMai SN11 59,3
Error in line 107: OHVVeLI A156 126,3
Error in line 119: OHVVeLI S711 70,6
Error in line 120: OHVVeLI S938 33,1
Error in line 126: htWidzBx S711 0,5
Error in line 136: CyTC S711 1,5
Error in line 141: Eds S711 56,30
Error in line 148: Eds S955 90,6
Error in line 154: S938 A156 48,6
Error in line 178: htWidzBx S938 85,8
Error in line 181: o4lWL S938 62,6
Error in line 184: htWidzBx A156 61,4
Error in line 179: CyTC S711 65,0
Error in line 205: htWidzBx S711 47,17
Error in line 208: OHVVeLI S711 6,2
Error in line 215: OHVVeLI S955 49,7
Error in line 223: CyTC A156 22,5
Error in line 229: S938 S955 58,80
Error in line 228: S938 S711 33,5
Error in line 226: CyTC S711 27,9
Error in line 232: CyTC A156 97,5
Error in line 234: OHVVeLI A156 89,8
Error in line 240: Eds S938 76,3
Error in line 246: Eds A156 32,5
